--- a/css/styles.css
+++ b/css/styles.css
@@ -107,12 +107,14 @@ nav h1 a {
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
+    font-size: 1em;
     margin: 0;
-    width: calc(50% - 80px);
+    width: 100%;
+    text-align: center;
 }
 
 /* Display list items side by side */
+
 #breadcrumb li {
     display: inline;
 }
@@ -126,13 +128,13 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #f18200;
     text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
+    color: #3397db;
     text-decoration: underline;
 }
 
@@ -175,11 +177,12 @@ nav h1 a {
   border: 1px solid #fff;
   font-family: Arial, sans-serif;
   font-size: 0.9em;
-  height: 35px;
+  height: 2.3em;
   letter-spacing: 0;
   margin: 10px 20px;
   padding: 0 20px;
   width: 18%;
+  text-align-last: center;
 }
 
 .filter-options label {
@@ -253,52 +256,63 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 
-.inside header {
+.inside .restaurant-header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.inside #map-container {
+.restaurant-container #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  width: 100%;
 }
-.inside #map {
+
+.restaurant-container #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
+
+.restaurant-main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 #restaurant-name {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-family: Arial, sans-serif;
+  font-size: 1.8em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
 	width: 90%;
 }
+
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 1em;
   margin: 10px 0px;
 }
+
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 1em;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -307,40 +321,201 @@ nav h1 a {
   text-transform: uppercase;
 	width: 90%;
 }
-#restaurant-container, #reviews-container {
+
+.restaurant-container {
+  height: 50%;
+  width: 100%;
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 50%;
+  display: flex;
+  flex-direction: row-reverse;
 }
+
+.restaurant-container #restaurant-info {
+  height: 100%;
+  scroll-behavior: auto;
+}
+
 #reviews-container {
+  height: 50%;
+  width: 100%;
   padding: 30px 40px 80px;
 }
+
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
-  font-weight: 300;
+  font-size: 1.8em;
+  font-weight: 200;
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
-#reviews-list {
-  margin: 0;
-  padding: 0;
-}
-#reviews-list li {
-  background-color: #fff;
-    border: 2px solid #f3f3f3;
-  display: block;
-  list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  padding: 0 20px 20px;
-  position: relative;
-  width: 85%;
-}
+
 #reviews-list li p {
-  margin: 0 0 10px;
+  margin: 0;
+  padding-bottom: 5px;
+  text-align: justify;
 }
+
+#reviews-list li p:first-of-type {
+  font-size: 1.4em;
+  font-weight: bold;
+}
+
+#reviews-list li p:last-of-type {
+  padding: 15px 0px;
+  font-size: 1em;
+  line-height: 1.3em;
+}
+
+#reviews-list li p:nth-child(2),
+#reviews-list li p:nth-child(3)
+{
+  display: inline;
+  font-size: 1em;
+  font-weight: bold;
+  padding-right: 10px;
+}
+
+#reviews-list li p:nth-child(2):after {
+  padding-left: 10px;
+  content: '|'
+}
+
 #restaurant-hours td {
   color: #666;
+}
+
+/* Media queries to handle various device widths */
+
+@media only screen and (max-width: 918px) {
+
+  #restaurants-list li {
+    width: 45%;
+  }
+
+  #map {
+    width: 100%;
+  }
+
+  .filter-options select {
+    width: auto;
+  }
+
+  .restaurant-container {
+    flex-direction: column-reverse;
+  }
+
+  .restaurant-container #map-container {
+    height: 200px;
+    background: none repeat scroll 0 0;
+    padding-top: 20px;
+  }
+
+  #restaurant-img,
+  #restaurant-cuisine {
+    width: 100%;
+  }
+
+  #restaurant-name {
+    text-align: center;
+  }
+
+  #restaurant-address {
+    font-size: 1.5em;
+  }
+
+  #breadcrumb {
+    font-size: 1.2em;
+  }
+
+}
+
+@media only screen and (max-width: 750px) {
+  
+  #restaurants-list li h2 {
+    line-height: 1;
+    margin-bottom: 0px;
+  }
+}
+
+@media only screen and (max-width: 690px) {
+
+  #restaurants-list li {
+    width: 90%;
+    max-height: 400;
+  }
+
+  #restaurants-list .restaurant-img {
+    max-height: 280px;
+  }
+
+  .filter-options h2 {
+    margin-bottom: 5px;
+    font-size: 1.7em;
+  }
+
+  .filter-options select {
+    font-size: 1.3em;
+  }
+
+  #map {
+    max-height: 300px;
+    margin: 5px;
+  }
+
+}
+
+@media only screen and (max-width: 630px){
+
+  #restaurants-list li {
+    width: 90%;
+    min-height: 250px;
+    max-height: 380px;
+  }
+  
+  #restaurants-list .restaurant-img {
+    max-height: 250px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+
+  .filter-options h2 {
+    font-size: 1.3em;
+  }
+
+  .filter-options select,
+  #restaurant-name {
+    font-size: 1em;
+  }
+
+  #restaurant-address {
+    font-size: 1em;
+  }
+
+  #breadcrumb {
+    font-size: 0.8em;
+  }
+
+  nav h1 {
+    font-size: 1.2em;
+  }
+
+  #footer {
+    font-size: 0.5em;
+  }
+
+}
+
+@media only screen and (max-width: 380px) {
+
+  .filter-options h2 {
+    font-size: 1em;
+  }
+
+  .filter-options select {
+    font-size: 0.8em;
+  }
+
 }
